--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
 		<div>
                <h1>Nom & Prenom:</h1>
 
-			   <h2> JALAL ELAR</h2>
+			   <h2> JALAL ELARa</h2>
 		</div>
 		<div>
                <h1>Domaine:</h1>
