--- a/hello.html
+++ b/hello.html
@@ -23,7 +23,7 @@
 			   <h2> JALAL ELARa</h2>
 		</div>
 		<div>
-               <h1>Domaine:</h1>
+               <h1>Domaiiiiiine:</h1>
 
 			   <h2> CS </h2>
 		</div>
@@ -32,7 +32,7 @@
 		<div>
                <h1>Plan1:</h1>
 
-			   <p> Installation GIT </p>
+			   <p> Installation GIT hh</p>
 		</div>
 	<div>
 		<script src="https://gist.github.com/rePoProjets/ea395547bfd048463501248a13e48ae6.js"></script>
